Начали разработку архитектуры классов

--- a/projectTMG/projectTMG.vcxproj
+++ b/projectTMG/projectTMG.vcxproj
@@ -73,11 +73,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="engine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Modules\loadRes.cpp" />
     <ClCompile Include="Modules\tinyxml2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="engine.hpp" />
     <ClInclude Include="macros.h" />
     <ClInclude Include="Modules\loadRes.hpp" />
     <ClInclude Include="Modules\tinyxml2.hpp" />
