--- a/projectTMG/projectTMG.vcxproj
+++ b/projectTMG/projectTMG.vcxproj
@@ -73,6 +73,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Engine\animatesprite.cpp" />
     <ClCompile Include="Engine\clock.cpp" />
     <ClCompile Include="Engine\engine.cpp" />
     <ClCompile Include="Engine\icon.cpp" />
