ng::Event, укорочение кода

--- a/projectTMG/projectTMG.vcxproj
+++ b/projectTMG/projectTMG.vcxproj
@@ -76,6 +76,7 @@
     <ClCompile Include="Engine\animatesprite.cpp" />
     <ClCompile Include="Engine\clock.cpp" />
     <ClCompile Include="Engine\engine.cpp" />
+    <ClCompile Include="Engine\event.cpp" />
     <ClCompile Include="Engine\icon.cpp" />
     <ClCompile Include="Engine\logstream.cpp" />
     <ClCompile Include="Engine\music.cpp" />
