--- a/projectTMG/projectTMG.vcxproj
+++ b/projectTMG/projectTMG.vcxproj
@@ -96,6 +96,9 @@
       <SubType>Designer</SubType>
     </Xml>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="main.log" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
