Пофиксил баг с конфигом, добавил комментарии

--- a/projectTMG/config.ini
+++ b/projectTMG/config.ini
@@ -1,7 +1,28 @@
-#-------------------------------------------------
-# Файл конфигурации движка
-#-------------------------------------------------
-scenario = scenario/script.xml
-#-------------------------------------------------
+#################################################
+#          Файл конфигурации движка             #
+#################################################
 
-#-------------------------------------------------
+
+#================================================
+# Путь к сценарию
+#------------------------------------------------
+scenario = scenario/script.xml
+#================================================
+
+
+#================================================
+# Разрешение
+#------------------------------------------------
+screen_x = 
+screen_y = 720
+#================================================
+
+
+#================================================
+# Режим отрисовки
+#------------------------------------------------
+#     7 - в окне
+#     8 - на весь экран
+#------------------------------------------------
+screen_mode = 7
+#================================================
