--- a/projectTMG/config.ini
+++ b/projectTMG/config.ini
@@ -1,28 +1,28 @@
 #################################################
-#          Файл конфигурации движка             #
+#          Р¤Р°Р№Р» РєРѕРЅС„РёРіСѓСЂР°С†РёРё РґРІРёР¶РєР°             #
 #################################################
 
 
 #================================================
-# Путь к сценарию
+# РџСѓС‚СЊ Рє СЃС†РµРЅР°СЂРёСЋ
 #------------------------------------------------
 scenario = scenario/script.xml
 #================================================
 
 
 #================================================
-# Разрешение
+# Р Р°Р·СЂРµС€РµРЅРёРµ
 #------------------------------------------------
-screen_x = 
+screen_x = 1280
 screen_y = 720
 #================================================
 
 
 #================================================
-# Режим отрисовки
+# Р РµР¶РёРј РѕС‚СЂРёСЃРѕРІРєРё
 #------------------------------------------------
-#     7 - в окне
-#     8 - на весь экран
+#     7 - РІ РѕРєРЅРµ
+#     8 - РЅР° РІРµСЃСЊ СЌРєСЂР°РЅ
 #------------------------------------------------
 screen_mode = 7
 #================================================
