--- a/projectTMG/Makefile
+++ b/projectTMG/Makefile
@@ -15,34 +15,28 @@ OO = $(PR) Foundation
 LF = $(PR) sfml-window $(PR) sfml-graphics $(PR) sfml-system $(PR) sfml-audio
 # Имя исполняемого файла
 OF = game
+# Путь до папки с результами компиляции
+DIR = Build
 #------------------------------------------------------------------------------
-DIR = Debug
-#------------------------------------------------------------------------------
-source_dirs := . Engine Modules
-#------------------------------------------------------------------------------
-search_wildcards := $(addsuffix /*.cpp,$(source_dirs)) 
-#------------------------------------------------------------------------------
-depend := $(notdir $(patsubst %.cpp,%.o,$(wildcard $(search_wildcards))))
-#------------------------------------------------------------------------------
-depend += pathfinder.o
-#------------------------------------------------------------------------------
-depend := $(addprefix $(DIR)/,$(depend))
+source_dirs := . Modules Engine
 #------------------------------------------------------------------------------
 all: $(DIR)/$(OF)
 #------------------------------------------------------------------------------
 debug: CF += -DDEBUG
 debug: $(DIR)/$(OF)
 #------------------------------------------------------------------------------
+search_wildcards := $(addsuffix /*.cpp,$(source_dirs)) 
+depend := $(notdir $(patsubst %.cpp,%.o,$(wildcard $(search_wildcards)))) 
+depend += pathfinder.o
+depend := $(addprefix $(DIR)/,$(depend))
+#------------------------------------------------------------------------------
 $(DIR)/$(OF): $(depend)
 	$(CC) $(LF) $(OO) $^ -o $@
 #------------------------------------------------------------------------------
 VPATH := $(source_dirs)
 #------------------------------------------------------------------------------
-# Все C++ файлы в директориях source_dirs
 $(DIR)/%.o: %.cpp
 	$(CC) $(CF) $(addprefix -I,$(source_dirs)) $< -o $@
-#------------------------------------------------------------------------------
-# Все Objective-C файлы в директориях source_dirs
 $(DIR)/%.o: %.mm
 	$(OC) $(CF) $(addprefix -I,$(source_dirs)) $< -o $@
 #------------------------------------------------------------------------------
